changed runtime extension items to consume from the new sts300 update site repo

--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -474,7 +474,7 @@
             name="Spring Roo (current production release)"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(com.springsource.sts.version&gt;=2.5.1)"
-            siteUrl="http://dist.springsource.com/release/TOOLS/extensions/e3.5">
+            siteUrl="http://dist.springsource.com/release/TOOLS/extensions/sts300">
          <icon
                image32="images/spring_roo_32.png">
          </icon>
@@ -510,7 +510,7 @@
             license="Free, ASL"
             name="Grails (current production release)"
             provider="Codehaus.org"
-            siteUrl="http://dist.springsource.com/release/TOOLS/extensions/e3.5">
+            siteUrl="http://dist.springsource.com/release/TOOLS/extensions/sts300">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -705,7 +705,7 @@
             license="Commercial"
             name="VMware vFabric tc Server Developer Edition"
             provider="VMware, Inc."
-            siteUrl="http://dist.springsource.com/release/TOOLS/extensions/e3.5">
+            siteUrl="http://dist.springsource.com/release/TOOLS/extensions/sts300">
          <icon
                image32="images/springsource_32.png">
          </icon>
