changed Gradle install to point directly to 2.9.0 release repo

--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -302,7 +302,7 @@
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(platform.version&gt;=3.6.0)"
-            siteUrl="http://dist.springsource.com/release/TOOLS/gradle">
+            siteUrl="http://dist.springsource.com/release/TOOLS/gradle/2.9.0.RELEASE">
          <icon
                image32="images/gradle_32.png">
          </icon>
