Point Groovy-Eclipse and Grails-ide to product update site.  Remove entries for Groovy/Grails on Juno for 3.8 and merget that with the 4.2 entries.

--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -196,6 +196,7 @@
          </overview>
       </connectorDescriptor>
 
+     <!-- START Groovy-Eclipse -->
      <!-- Groovy-Eclipse for Indigo -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
@@ -207,9 +208,8 @@
             name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.7">
+            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e3.7">
          <iu id="org.codehaus.groovy.eclipse.feature" />
-         <iu id="org.codehaus.groovy.m2eclipse" />
          <icon
                image32="images/groovy_32.png"></icon>
          <overview
@@ -227,7 +227,7 @@
             name="Groovy 2.0 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.7">
+            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e3.7">
          <iu id="org.codehaus.groovy20.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -236,46 +236,23 @@
                url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
          </overview>
       </connectorDescriptor>
-
-
-     <!-- Groovy-Eclipse for Juno 3.8 -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
-            id="org.codehaus.groovy.eclipse.feature"
+            description="This feature provides integration between Groovy-Eclipse and M2Eclipse. Only install this feature if you are using Groovy and Maven inside of STS"
+            id="org.codehaus.groovy.m2eclipse.feature"
             kind="task, document"
-            license="Free, EPL/ASL"
+            license="Free, EPL"
             groupId="certified"
-            name="Groovy-Eclipse"
+            name="Groovy-Eclipse Configurator for M2Eclipse"
             provider="Codehaus.org"
-            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.8">
-         <iu id="org.codehaus.groovy.eclipse.feature" />
+            platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
+            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e3.7">
          <iu id="org.codehaus.groovy.m2eclipse" />
          <icon
                image32="images/groovy_32.png"></icon>
          <overview
-               summary="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
-               url="http://groovy.codehaus.org/Eclipse+Plugin">
-         </overview>
-      </connectorDescriptor>
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="This feature provides the Groovy 2.0 compiler for Groovy-Eclipse.  Once installed, the 2.0 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
-            id="org.codehaus.groovy20.feature"
-            kind="task, document"
-            license="Free, EPL/ASL"
-            groupId="certified"
-            name="Groovy 2.0 Compiler for Groovy-Eclipse"
-            provider="Codehaus.org"
-            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.8">
-         <iu id="org.codehaus.groovy20.feature" />
-         <icon
-               image32="images/groovy_32.png"></icon>
-         <overview
-               summary="The Groovy 2.0 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
-               url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+               summary="This feature provides the Groovy-Eclipse configurator for M2Eclipse"
+               url="http://groovy.codehaus.org/Groovy-Eclipse+compiler+plugin+for+Maven">
          </overview>
       </connectorDescriptor>
 
@@ -289,10 +266,9 @@
             groupId="certified"
             name="Groovy-Eclipse"
             provider="Codehaus.org"
-            platformFilter="(platform.version&gt;=4.2.0)"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e4.2">
+            platformFilter="(platform.version&gt;=3.8.0)"
+            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e4.2">
          <iu id="org.codehaus.groovy.eclipse.feature" />
-         <iu id="org.codehaus.groovy.m2eclipse" />
          <icon
                image32="images/groovy_32.png"></icon>
          <overview
@@ -309,8 +285,8 @@
             groupId="certified"
             name="Groovy 2.0 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
-            platformFilter="(platform.version&gt;=4.2.0)"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e4.2">
+            platformFilter="(platform.version&gt;=3.8.0)"
+            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e4.2">
          <iu id="org.codehaus.groovy20.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -319,7 +295,26 @@
                url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
          </overview>
       </connectorDescriptor>
-
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="This feature provides integration between Groovy-Eclipse and M2Eclipse. Only install this feature if you are using Groovy and Maven inside of STS"
+            id="org.codehaus.groovy.m2eclipse.feature"
+            kind="task, document"
+            license="Free, EPL"
+            groupId="certified"
+            name="Groovy-Eclipse Configurator for M2Eclipse"
+            provider="Codehaus.org"
+            platformFilter="(platform.version&gt;=3.8.0)"
+            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e4.2">
+         <iu id="org.codehaus.groovy.m2eclipse" />
+         <icon
+               image32="images/groovy_32.png"></icon>
+         <overview
+               summary="This feature provides the Groovy-Eclipse configurator for M2Eclipse"
+               url="http://groovy.codehaus.org/Groovy-Eclipse+compiler+plugin+for+Maven">
+         </overview>
+      </connectorDescriptor>
+      <!-- END Groovy-Eclipse -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="Support for creating Grails projects, automatic dependency management, running commands and editing GSPs."
@@ -330,7 +325,7 @@
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.7">
+            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e3.7">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -349,28 +344,8 @@
             license="Free, EPL"
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
-            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.8">
-         <icon
-               image32="images/grails_32.png">
-         </icon>
-         <overview
-               summary="Support for creating Grails projects, automatic dependency management, running commands and editing GSPs."
-               url="http://www.grails.org/STS+Integration">
-         </overview>
-      </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="Support for creating Grails projects, automatic dependency management, running commands and editing GSPs."
-            id="org.grails.ide.eclipse"
-            kind="task, document"
-            groupId="certified"
-            license="Free, EPL"
-            name="Grails Support"
-            provider="SpringSource, a division of VMware, Inc."
-            platformFilter="(platform.version&gt;=4.2.0)"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e4.2">
+            platformFilter="(platform.version&gt;=3.8.0)"
+            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e4.2">
          <icon
                image32="images/grails_32.png">
          </icon>
