--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -368,7 +368,7 @@
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(platform.version&gt;=3.6.0)"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/gradle">
+            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e3.7">
          <icon
                image32="images/gradle_32.png">
          </icon>
